--- a/quiz.html
+++ b/quiz.html
@@ -101,7 +101,7 @@
       <input type="text" name="timhieu" class="form-control" required />
 
       <button type="submit" class="btn-submit w-100 mt-3">Gửi</button>
-      <p class="muted">* Mọi chi về em, anh xin được lưu mang cất vào làm của riêng hihi ☺️ </p>
+      <p class="muted">* Mọi chi tiết về em, anh xin được lưu mang cất vào làm của riêng hihi ☺️ </p>
     </form>
   </div>
 
