--- a/admin.html
+++ b/admin.html
@@ -7,12 +7,20 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
+  
   <style>
     body {
       background: linear-gradient(to bottom right, #ffdde1, #ee9ca7);
       min-height: 100vh;
       font-family: 'Segoe UI', sans-serif;
-      padding: 20px;
+      padding: 0; /* Loại bỏ padding để header có thể trải rộng toàn màn hình */
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+    }
+
+    #header-container {
+      width: 100%; /* Header chiếm toàn bộ chiều rộng */
     }
 
     .card-container {
@@ -21,7 +29,8 @@
       border-radius: 25px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
       max-width: 900px;
-      margin: 0 auto;
+      margin: 20px auto; /* Thêm margin top và bottom */
+      width: 100%;
     }
 
     h1 {
@@ -107,6 +116,7 @@
   </style>
 </head>
 <body>
+  <div id="header-container"></div>
   <div class="card-container">
     <h1>Danh sách câu trả lời</h1>
     <div class="toolbar">
@@ -124,8 +134,20 @@
 
   <script type="module" src="js/api.js"></script>
   <script type="module" src="js/admin.js"></script>
+  
+  <script type="module">
+  import { requireAdmin } from './js/authGuard.js';
+  requireAdmin(); // chỉ admin mới vào được
+</script>
 
   <script>
+    fetch('header.html')
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById('header-container').innerHTML = html;
+        return import('./js/header.js');
+      });
+      
     // Tự động phát nhạc
     const music = document.getElementById('bgMusic');
     window.addEventListener('DOMContentLoaded', () => {
