--- a/quiz.html
+++ b/quiz.html
@@ -13,9 +13,14 @@
       min-height: 100vh;
       font-family: 'Segoe UI', sans-serif;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      padding: 20px;
+      padding: 0; /* Loại bỏ padding để header có thể trải rộng toàn màn hình */
+      margin: 0;
+    }
+
+    #header-container {
+      width: 100%; /* Header chiếm toàn bộ chiều rộng */
     }
 
     .card-container {
@@ -25,12 +30,14 @@
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
       width: 100%;
       max-width: 600px;
+      margin: 20px 0; /* Thêm margin top và bottom */
     }
 
     h1 {
       font-weight: bold;
       margin-bottom: 25px;
       color: #ff3b5f;
+      text-align: center;
     }
 
     .form-label {
@@ -79,6 +86,7 @@
   </style>
 </head>
 <body>
+  <div id="header-container"></div>
   <div class="card-container">
     <h1>Trả lời giúp anh nhé ❤️</h1>
     <form id="quizForm">
@@ -113,7 +121,19 @@
   <script type="module" src="js/api.js"></script>
   <script type="module" src="js/quiz.js"></script>
 
+<script type="module">
+  import { requireLogin } from './js/authGuard.js';
+  requireLogin(); // bắt buộc login, bất kỳ role nào
+</script>
+
   <script>
+    fetch('header.html')
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById('header-container').innerHTML = html;
+        return import('./js/header.js');
+      });
+      
     // tự động phát nhạc
     const music = document.getElementById('bgMusic');
     window.addEventListener('DOMContentLoaded', () => {
