--- a/result.html
+++ b/result.html
@@ -7,15 +7,20 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
-  <style>
+  <!-- <style>
     body {
       background: linear-gradient(to bottom right, #ffdde1, #ee9ca7);
       min-height: 100vh;
       font-family: 'Segoe UI', sans-serif;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      padding: 20px;
+      padding: 0; /* Loại bỏ padding để header có thể trải rộng toàn màn hình */
+      margin: 0;
+    }
+
+    #header-container {
+      width: 100%; /* Header chiếm toàn bộ chiều rộng */
     }
 
     .card-container {
@@ -26,7 +31,27 @@
       width: 100%;
       max-width: 600px;
       text-align: center;
+      margin: 20px 0; /* Thêm margin top và bottom */
     }
+      /* Chỉ áp dụng cho nút Trang chủ ở result.html */
+  .card-container .btn-result {
+    border-radius: 25px;
+    font-weight: bold;
+    padding: 10px 20px;
+    margin: 5px;
+    transition: all 0.3s;
+  }
+
+  .card-container .btn-result-outline {
+    background-color: transparent;
+    color: #ff6b81;
+    border: 2px solid #ff6b81;
+  }
+
+  .card-container .btn-result-outline:hover {
+    background-color: #ff6b81;
+    color: white;
+  }
 
     h1 {
       font-weight: bold;
@@ -85,26 +110,158 @@
       z-index: 999;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
-  </style>
+    
+  </style> -->
+<style>
+  body {
+    background: linear-gradient(to bottom right, #ffdde1, #ee9ca7);
+    min-height: 100vh;
+    font-family: 'Segoe UI', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+  }
+
+  #header-container {
+    width: 100%;
+  }
+
+  .card-container {
+    background-color: rgba(255,255,255,0.2);
+    padding: 30px 40px;
+    border-radius: 25px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+    width: 100%;
+    max-width: 600px;
+    text-align: center;
+    margin: 20px;
+  }
+
+  h1 {
+    font-weight: bold;
+    margin-bottom: 25px;
+    color: #ff3b5f;
+    font-size: 2rem;
+  }
+
+  #result {
+    background-color: rgba(255,255,255,0.4);
+    padding: 20px;
+    border-radius: 20px;
+    margin-bottom: 25px;
+    min-height: 100px;
+    font-size: 1.1rem;
+    color: #333;
+  }
+
+  /* Nút Trang chủ riêng cho result.html */
+  .card-container .btn-result {
+    border-radius: 25px;
+    font-weight: bold;
+    padding: 10px 20px;
+    margin: 5px;
+    transition: all 0.3s;
+  }
+
+  .card-container .btn-result-outline {
+    background-color: transparent;
+    color: #ff6b81;
+    border: 2px solid #ff6b81;
+  }
+
+  .card-container .btn-result-outline:hover {
+    background-color: #ff6b81;
+    color: white;
+  }
+
+  #musicToggle {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: rgba(255, 192, 203, 0.9);
+    border: none;
+    padding: 10px 15px;
+    border-radius: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    z-index: 999;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  }
+
+  /* Responsive */
+  @media (max-width: 768px) {
+    .card-container {
+      padding: 20px;
+      margin: 15px;
+    }
+    h1 {
+      font-size: 1.5rem;
+      margin-bottom: 20px;
+    }
+    #result {
+      font-size: 1rem;
+      padding: 15px;
+    }
+    .card-container .btn-result {
+      padding: 8px 16px;
+      font-size: 0.9rem;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .card-container {
+      padding: 15px;
+      margin: 10px;
+    }
+    h1 {
+      font-size: 1.3rem;
+    }
+    #result {
+      font-size: 0.95rem;
+      padding: 12px;
+    }
+    .card-container .btn-result {
+      padding: 6px 12px;
+      font-size: 0.85rem;
+    }
+  }
+</style>
+
 </head>
 <body>
+  <div id="header-container"></div>
   <div class="card-container">
     <h1>Kết quả của em ❤️</h1>
     <div id="result" class="mb-3"></div>
     <div class="d-flex justify-content-center flex-wrap">
       <!-- <a class="btn btn-action btn-action-primary" href="feedback.html">Gửi cảm nhận sau 1 tháng</a> -->
-      <a class="btn btn-action btn-action-outline" href="index.html">Trang chủ</a>
+      <!-- <a class="btn btn-action btn-action-outline" href="index.html">Trang chủ</a> -->
+       <a class="btn btn-result btn-result-outline" href="index.html">Trang chủ</a>
     </div>
   </div>
 
+  
   <!-- Audio tự phát -->
   <audio id="bgMusic" src="music/intro-end-of-the-world-a-cappella.mp3" loop></audio>
   <!-- Nút bật/tắt nhạc -->
   <button id="musicToggle">🎵 Nhạc: Bật</button>
 
   <script type="module" src="js/result.js"></script>
+<script type="module">
+  import { requireLogin } from './js/authGuard.js';
+  requireLogin(); // bắt buộc login, bất kỳ role nào
+</script>
 
   <script>
+    fetch('header.html')
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById('header-container').innerHTML = html;
+        return import('./js/header.js');
+      });
+      
     // tự động phát nhạc
     const music = document.getElementById('bgMusic');
     window.addEventListener('DOMContentLoaded', () => {
