--- a/admin.html
+++ b/admin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,30 +8,38 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
-  
+
   <style>
     body {
       background: linear-gradient(to bottom right, #ffdde1, #ee9ca7);
       min-height: 100vh;
       font-family: 'Segoe UI', sans-serif;
-      padding: 0; /* Loại bỏ padding để header có thể trải rộng toàn màn hình */
+      padding: 0;
+      /* Loại bỏ padding để header có thể trải rộng toàn màn hình */
       margin: 0;
       display: flex;
       flex-direction: column;
     }
 
     #header-container {
-      width: 100%; /* Header chiếm toàn bộ chiều rộng */
+      width: 100%;
+      /* Header chiếm toàn bộ chiều rộng */
     }
 
     .card-container {
-      background-color: rgba(255,255,255,0.2);
-      padding: 30px 40px;
+      background-color: rgba(255, 255, 255, 0.2);
+      padding: 20px;
+      /* padding cho nội dung thoáng */
       border-radius: 25px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      max-width: 900px;
-      margin: 20px auto; /* Thêm margin top và bottom */
-      width: 100%;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+      width: 95%;
+      /* gần full chiều ngang */
+      max-width: 1200px;
+      /* giới hạn trên màn hình lớn */
+      margin: 20px auto;
+      /* căn giữa và khoảng cách trên/dưới */
+      box-sizing: border-box;
+      /* padding tính trong width */
     }
 
     h1 {
@@ -62,19 +71,19 @@
       transition: all 0.3s;
     }
 
-    .btn-outline-custom {
+    /* .btn-outline-custom {
       background-color: transparent;
       color: #ff6b81;
       border: 2px solid #ff6b81;
-    }
+    } */
 
-    .btn-outline-custom:hover {
+    /* .btn-outline-custom:hover {
       background-color: #ff6b81;
       color: white;
-    }
+    } */
 
     #tableWrap {
-      background-color: rgba(255,255,255,0.4);
+      background-color: rgba(255, 255, 255, 0.4);
       padding: 15px;
       border-radius: 15px;
       overflow-x: auto;
@@ -91,7 +100,7 @@
       font-size: 16px;
       cursor: pointer;
       z-index: 999;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 
     .btn-back {
@@ -113,15 +122,44 @@
       color: white;
       text-decoration: none;
     }
+
+    .btn-refresh {
+  display: inline-block;
+  padding: 10px 25px;
+  font-weight: bold;
+  font-size: 16px;
+  color: #ff6b81;
+  background-color: transparent;
+  border: 2px solid #ff6b81;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  text-align: center;
+  text-decoration: none;
+  margin: 0; /* reset margin */
+}
+
+.btn-refresh:hover {
+  background-color: #ff6b81;
+  color: #fff;
+}
+
+.btn-refresh:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px rgba(255, 107, 129, 0.5);
+}
+
   </style>
 </head>
+
 <body>
   <div id="header-container"></div>
   <div class="card-container">
     <h1>Danh sách câu trả lời</h1>
     <div class="toolbar">
       <input id="search" class="form-control" placeholder="Tìm theo tên..." />
-      <button id="refresh" class="btn btn-outline-custom btn-action">Làm mới</button>
+      <button id="refresh" class="btn-refresh">Làm mới</button>
+      <!-- <button id="refresh" class="btn btn-outline-custom btn-action">Làm mới</button> -->
     </div>
     <div id="tableWrap" class="table table-striped table-hover"></div>
     <a href="index.html" class="btn-back">Quay lại</a>
@@ -134,9 +172,9 @@
 
   <script type="module" src="js/api.js"></script>
   <script type="module" src="js/admin.js"></script>
-  
+
   <script type="module">
-  import { requireAdmin } from './js/authGuard.js';
+    import { requireAdmin } from './js/authGuard.js';
   requireAdmin(); // chỉ admin mới vào được
 </script>
 
@@ -147,7 +185,7 @@
         document.getElementById('header-container').innerHTML = html;
         return import('./js/header.js');
       });
-      
+
     // Tự động phát nhạc
     const music = document.getElementById('bgMusic');
     window.addEventListener('DOMContentLoaded', () => {
@@ -173,4 +211,5 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
