--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
       <p class="lead mb-2">Anh là Hoàng, anh có vài câu hỏi muốn hỏi em có được hông dạ 😗</p>
       <p class="lead mb-4">Vì anh muốn được tìm hiểu về em nhiều hơn nữa đó ạ</p>
       <a href="quiz.html" class="btn btn-start mb-3">Bắt đầu ngay</a>
-      <div class="links">
+      <!-- <div class="links">
         <a href="admin.html" class="btn btn-admin">Trang quản trị</a>
-      </div>
+      </div> -->
     </div>
   </div>
 
