--- a/quiz.html
+++ b/quiz.html
@@ -93,7 +93,7 @@
       <label class="form-label">Họ tên đầy đủ của em là gì?</label>
       <input type="text" name="name" class="form-control" required />
       
-      <label class="form-label">Em là người tính cách như thế nào?</label>
+      <label class="form-label">Em thích người tính cách như thế nào?</label>
       <input type="text" name="tinhcach" class="form-control" required />
 
       <label class="form-label">Màu em thích nhất?</label>
