--- a/result.html
+++ b/result.html
@@ -7,7 +7,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
-  <!-- <style>
+  <style>
     body {
       background: linear-gradient(to bottom right, #ffdde1, #ee9ca7);
       min-height: 100vh;
@@ -15,12 +15,12 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 0; /* Loại bỏ padding để header có thể trải rộng toàn màn hình */
+      padding: 0;
       margin: 0;
     }
 
     #header-container {
-      width: 100%; /* Header chiếm toàn bộ chiều rộng */
+      width: 100%;
     }
 
     .card-container {
@@ -31,32 +31,14 @@
       width: 100%;
       max-width: 600px;
       text-align: center;
-      margin: 20px 0; /* Thêm margin top và bottom */
+      margin: 20px;
     }
-      /* Chỉ áp dụng cho nút Trang chủ ở result.html */
-  .card-container .btn-result {
-    border-radius: 25px;
-    font-weight: bold;
-    padding: 10px 20px;
-    margin: 5px;
-    transition: all 0.3s;
-  }
-
-  .card-container .btn-result-outline {
-    background-color: transparent;
-    color: #ff6b81;
-    border: 2px solid #ff6b81;
-  }
-
-  .card-container .btn-result-outline:hover {
-    background-color: #ff6b81;
-    color: white;
-  }
 
     h1 {
       font-weight: bold;
       margin-bottom: 25px;
       color: #ff3b5f;
+      font-size: 2rem;
     }
 
     #result {
@@ -69,7 +51,7 @@
       color: #333;
     }
 
-    .btn-action {
+    .card-container .btn-result {
       border-radius: 25px;
       font-weight: bold;
       padding: 10px 20px;
@@ -77,22 +59,13 @@
       transition: all 0.3s;
     }
 
-    .btn-action-primary {
-      background-color: #ff6b81;
-      color: white;
-      border: none;
-    }
-    .btn-action-primary:hover {
-      background-color: #ff3b5f;
-      color: white;
-    }
-
-    .btn-action-outline {
+    .card-container .btn-result-outline {
       background-color: transparent;
       color: #ff6b81;
       border: 2px solid #ff6b81;
     }
-    .btn-action-outline:hover {
+
+    .card-container .btn-result-outline:hover {
       background-color: #ff6b81;
       color: white;
     }
@@ -110,125 +83,22 @@
       z-index: 999;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
-    
-  </style> -->
-<style>
-  body {
-    background: linear-gradient(to bottom right, #ffdde1, #ee9ca7);
-    min-height: 100vh;
-    font-family: 'Segoe UI', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0;
-    margin: 0;
-  }
 
-  #header-container {
-    width: 100%;
-  }
-
-  .card-container {
-    background-color: rgba(255,255,255,0.2);
-    padding: 30px 40px;
-    border-radius: 25px;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-    width: 100%;
-    max-width: 600px;
-    text-align: center;
-    margin: 20px;
-  }
-
-  h1 {
-    font-weight: bold;
-    margin-bottom: 25px;
-    color: #ff3b5f;
-    font-size: 2rem;
-  }
-
-  #result {
-    background-color: rgba(255,255,255,0.4);
-    padding: 20px;
-    border-radius: 20px;
-    margin-bottom: 25px;
-    min-height: 100px;
-    font-size: 1.1rem;
-    color: #333;
-  }
-
-  /* Nút Trang chủ riêng cho result.html */
-  .card-container .btn-result {
-    border-radius: 25px;
-    font-weight: bold;
-    padding: 10px 20px;
-    margin: 5px;
-    transition: all 0.3s;
-  }
-
-  .card-container .btn-result-outline {
-    background-color: transparent;
-    color: #ff6b81;
-    border: 2px solid #ff6b81;
-  }
-
-  .card-container .btn-result-outline:hover {
-    background-color: #ff6b81;
-    color: white;
-  }
-
-  #musicToggle {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: rgba(255, 192, 203, 0.9);
-    border: none;
-    padding: 10px 15px;
-    border-radius: 10px;
-    font-size: 16px;
-    cursor: pointer;
-    z-index: 999;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-  }
-
-  /* Responsive */
-  @media (max-width: 768px) {
-    .card-container {
-      padding: 20px;
-      margin: 15px;
+    /* Responsive */
+    @media (max-width: 768px) {
+      .card-container { padding: 20px; margin: 15px; }
+      h1 { font-size: 1.5rem; margin-bottom: 20px; }
+      #result { font-size: 1rem; padding: 15px; }
+      .card-container .btn-result { padding: 8px 16px; font-size: 0.9rem; }
     }
-    h1 {
-      font-size: 1.5rem;
-      margin-bottom: 20px;
-    }
-    #result {
-      font-size: 1rem;
-      padding: 15px;
-    }
-    .card-container .btn-result {
-      padding: 8px 16px;
-      font-size: 0.9rem;
-    }
-  }
 
-  @media (max-width: 480px) {
-    .card-container {
-      padding: 15px;
-      margin: 10px;
+    @media (max-width: 480px) {
+      .card-container { padding: 15px; margin: 10px; }
+      h1 { font-size: 1.3rem; }
+      #result { font-size: 0.95rem; padding: 12px; }
+      .card-container .btn-result { padding: 6px 12px; font-size: 0.85rem; }
     }
-    h1 {
-      font-size: 1.3rem;
-    }
-    #result {
-      font-size: 0.95rem;
-      padding: 12px;
-    }
-    .card-container .btn-result {
-      padding: 6px 12px;
-      font-size: 0.85rem;
-    }
-  }
-</style>
-
+  </style>
 </head>
 <body>
   <div id="header-container"></div>
@@ -236,23 +106,19 @@
     <h1>Kết quả của em ❤️</h1>
     <div id="result" class="mb-3"></div>
     <div class="d-flex justify-content-center flex-wrap">
-      <!-- <a class="btn btn-action btn-action-primary" href="feedback.html">Gửi cảm nhận sau 1 tháng</a> -->
-      <!-- <a class="btn btn-action btn-action-outline" href="index.html">Trang chủ</a> -->
        <a class="btn btn-result btn-result-outline" href="index.html">Trang chủ</a>
     </div>
   </div>
 
-  
-  <!-- Audio tự phát -->
+  <!-- Audio -->
   <audio id="bgMusic" src="music/intro-end-of-the-world-a-cappella.mp3" loop></audio>
-  <!-- Nút bật/tắt nhạc -->
   <button id="musicToggle">🎵 Nhạc: Bật</button>
 
   <script type="module" src="js/result.js"></script>
-<script type="module">
-  import { requireLogin } from './js/authGuard.js';
-  requireLogin(); // bắt buộc login, bất kỳ role nào
-</script>
+  <script type="module">
+    import { requireLogin } from './js/authGuard.js';
+    requireLogin();
+  </script>
 
   <script>
     fetch('header.html')
@@ -261,18 +127,29 @@
         document.getElementById('header-container').innerHTML = html;
         return import('./js/header.js');
       });
-      
-    // tự động phát nhạc
+
     const music = document.getElementById('bgMusic');
-    window.addEventListener('DOMContentLoaded', () => {
+    const toggleBtn = document.getElementById('musicToggle');
+
+    function tryPlayMusic() {
       music.volume = 0.2;
-      music.play().catch(() => {
-        console.log('Trình duyệt chặn autoplay. Click nút để bật nhạc.');
+      music.play().then(() => {
+        toggleBtn.textContent = '🎵 Nhạc: Bật';
+      }).catch(() => {
+        console.log('Autoplay bị chặn, chờ thao tác người dùng...');
       });
+    }
+
+    // Tự phát nhạc trên PC + cố gắng trên mobile
+    window.addEventListener('DOMContentLoaded', tryPlayMusic);
+
+    // Nếu mobile chặn, bật khi user chạm lần đầu
+    document.body.addEventListener('touchstart', function init() {
+      tryPlayMusic();
+      document.body.removeEventListener('touchstart', init);
     });
 
-    // bật/tắt nhạc
-    const toggleBtn = document.getElementById('musicToggle');
+    // Bật/tắt nhạc thủ công
     toggleBtn.addEventListener('click', () => {
       if (music.paused) {
         music.play();
@@ -284,7 +161,6 @@
     });
   </script>
 
-  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
