--- a/result.html
+++ b/result.html
@@ -111,7 +111,7 @@
   </div>
 
   <!-- Audio -->
-  <audio id="bgMusic" src="music/intro-end-of-the-world-a-cappella.mp3" loop></audio>
+  <audio id="bgMusic" src="music/intro-end-of-the-world-a-cappella.mp3" loop autoplay></audio>
   <button id="musicToggle">🎵 Nhạc: Bật</button>
 
   <script type="module" src="js/result.js"></script>
