--- a/feedback.html
+++ b/feedback.html
@@ -149,7 +149,7 @@
       document.addEventListener("click", enableSound);
       document.addEventListener("touchstart", enableSound);
 
-      toggleBtn.textContent = "🎵 Nhạc: Tắt";
+      //toggleBtn.textContent = "🎵 Nhạc: Tắt";
     } else {
       // Desktop: autoplay có tiếng
       music.play().catch(() => {
